--- a/client/components/home/home.html
+++ b/client/components/home/home.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>My test page</title>
-  </head>
-  <body>
-    <div>
-      Hello there my friend!
-    </div>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width" />
+  <title>Home</title>
+</head>
+
+<body>
+  <a href="../databases/databases.html">
+    Hello there my friend!
+  </a>
+</body>
+
 </html>
