--- a/client/components/register/register.html
+++ b/client/components/register/register.html
@@ -12,7 +12,7 @@
   <form id="register-form">
     <input required type="text" placeholder="Username" />
     <input required type="password" placeholder="Password" />
-    <button id="register-button">Register</button>
+    <button type="submit">Register</button>
   </form>
 </body>
 
