Add column for preview when listing plans

--- a/client/components/listPlans/listPlans.html
+++ b/client/components/listPlans/listPlans.html
@@ -5,6 +5,7 @@
   <title>All Plans</title>
   <link rel="stylesheet" type="text/css" href="listPlans.css">
   <script src="listPlans.js"></script>
+  <script src="../../modules/constants.js"></script>
 </head>
 
 <body>
@@ -18,6 +19,7 @@
         <th>Name</th>
         <th>Description</th>
         <th>Owner</th>
+        <th>PDF</th>
       </tr>
     </thead>
     <tbody id="plans-list"></tbody>
