Go back to plans list after plan creation

--- a/client/components/createPlan/createPlan.html
+++ b/client/components/createPlan/createPlan.html
@@ -5,6 +5,7 @@
   <title>Create Plan</title>
   <meta charset="UTF-8">
   <script src="createPlan.js"></script>
+  <script src="../../modules/constants.js"></script>
   <link rel="stylesheet" href="createPlan.css" />
 </head>
 
