--- a/client/components/listPlans/listPlans.html
+++ b/client/components/listPlans/listPlans.html
@@ -2,14 +2,14 @@
 <html>
 
 <head>
-  <title>All Plans</title>
+  <title>Plans</title>
   <link rel="stylesheet" type="text/css" href="listPlans.css">
   <script src="listPlans.js"></script>
   <script src="../../modules/constants.js"></script>
 </head>
 
 <body>
-  <h1>Plans List</h1>
+  <h1>Course Plans</h1>
   <button id="create-plan-button">Create Plan</button>
   <br></br>
   <table id="plans-table">
