--- a/client/components/createPlan/createPlan.html
+++ b/client/components/createPlan/createPlan.html
@@ -12,8 +12,6 @@
 <body>
   <h1>Създай учебна програма</h1>
   <form id="plan-form">
-    <!-- <label>Тип на дисциплината:</label> -->
-
     <label>Тип дисциплина:</label>
     <div class="radio-container">
       <div>
@@ -33,46 +31,41 @@
     <label for="name">Дисциплина:</label>
     <input type="text" id="name" name="name" required>
 
-    <!-- TODO: drop down menu -->
     <label for="department">Катедра:</label>
     <input type="text" id="department" name="department" required>
 
+    <!-- TODO: This should probably be the currently logged in user instead -->
     <label for="owner">Титуляр:</label>
     <input type="text" id="owner" name="owner" required>
 
-    <!-- TODO: onlu numbers allowed -->
+    <!-- TODO: only numbers allowed -->
     <label for="busyness">Заетост:</label>
     <input type="text" id="busyness" name="busyness" required>
 
-    <!-- TODO: onlu numbers allowed -->
+    <!-- TODO: only numbers allowed -->
     <label for="credits">Кредити:</label>
     <input type="text" id="credits" name="credits" required>
 
     <label for="description">Анотация:</label>
     <textarea id="description" name="description" required></textarea>
 
-    <!-- TODO: some kind of list with delimiters ??? -->
     <label for="requiredSkills">Нужни познания:</label>
-    <input type="text" id="requiredSkills" name="requiredSkills" required>
+    <textarea type="text" id="requiredSkills" name="requiredSkills" required></textarea>
 
     <!-- TODO: some kind of drop down select list -->
     <!-- NOTE: could be empty -->
-    <label for="dependencies">Зависимости (други курсове)</label>
-    <input type="text" id="dependencies" name="dependencies" required>
+    <!-- <label for="dependencies">Зависимости (други курсове)</label> -->
+    <!-- <input type="text" id="dependencies" name="dependencies" required> -->
 
-    <!-- TODO: some kind of list with delimiters ??? -->
-    <label for="learnedSkills">Очаквани резултати:</label>
-    <input type="text" id="learnedSkills" name="learnedSkills" required>
+    <label for="aquiredSkills">Очаквани резултати:</label>
+    <textarea type="text" id="aquiredSkills" name="aquiredSkills" required></textarea>
 
-    <!-- TODO: should be a list of topics -->
     <label for="contents">Учебно съдържание:</label>
     <textarea id="contents" name="contents" required></textarea>
 
-    <!-- TODO: should be a list of topics -->
     <label for="examSynopsis">Конспект за изпит:</label>
     <textarea id="examSynopsis" name="examSynopsis" required></textarea>
 
-    <!-- TODO: should be a list of topics -->
     <label for="bibliography">Библиография:</label>
     <textarea id="bibliography" name="bibliography" required></textarea>
 
