--- a/client/components/createPlan/createPlan.html
+++ b/client/components/createPlan/createPlan.html
@@ -24,9 +24,8 @@
       </div>
     </div>
 
-    <!-- TODO: target majors, Checkboxes + constants -->
-    <!-- <label for="title">Title:</label> -->
-    <!-- <input type="text" id="title" name="title" required> -->
+    <label>Специалност:</label>
+    <div id="target-majors" class="checkbox-container"></div>
 
     <label for="name">Дисциплина:</label>
     <input type="text" id="name" name="name" required>
