--- a/client/components/listPlans/listPlans.html
+++ b/client/components/listPlans/listPlans.html
@@ -18,7 +18,7 @@
         <th>Name</th>
         <th>Description</th>
         <th>Owner</th>
-        <th>PDF</th>
+        <th>Actions</th>
       </tr>
     </thead>
     <tbody id="plans-list"></tbody>
