fix: change plan_id to id and remove some comments

--- a/client/components/createPlan/createPlan.html
+++ b/client/components/createPlan/createPlan.html
@@ -68,7 +68,7 @@
     <label for="bibliography">Библиография:</label>
     <textarea id="bibliography" name="bibliography"></textarea>
 
-    <button type="submit">Създай учебна програма</button>
+    <button type="submit">Създай</button>
   </form>
 </body>
 
