feat: add import/export in JSON

--- a/client/components/listPlans/listPlans.html
+++ b/client/components/listPlans/listPlans.html
@@ -12,6 +12,11 @@
   <h1>Course Plans</h1>
   <button id="create-plan-button">Create Plan</button>
   <br></br>
+  <form id="upload-form">
+    <input type="file" id="file-input" accept=".json">
+    <button type="submit">Upload</button>
+  </form>
+  <br></br>
   <table id="plans-table">
     <thead>
       <tr>
