--- a/client/components/createPlan/createPlan.css
+++ b/client/components/createPlan/createPlan.css
@@ -1,3 +1,21 @@
+#upload-json-form {
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  border: solid;
+  border-width: 2px;
+  border-radius: 15px;
+  padding: 25px;
+  margin-bottom: 25px;
+}
+
+#plan-form {
+  border: solid;
+  border-width: 2px;
+  border-radius: 15px;
+  padding: 20px 30px 20px 20px;
+}
+
 body {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -67,11 +85,13 @@ textarea {
 }
 
 button[type="submit"] {
+  text-align: center;
   margin-bottom: 10px;
   padding: 10px 20px;
   background-color: #4CAF50;
   color: #fff;
   border: none;
+  border-radius: 5px;
   cursor: pointer;
 }
 
