--- a/client/components/listPlans/listPlans.html
+++ b/client/components/listPlans/listPlans.html
@@ -9,13 +9,8 @@
 </head>
 
 <body>
-  <h1>Course Plans</h1>
-  <button id="create-plan-button">Create Plan</button>
-  <br></br>
-  <form id="upload-form">
-    <input type="file" id="file-input" accept=".json">
-    <button type="submit">Upload</button>
-  </form>
+  <h1>Учебни програми</h1>
+  <button id="create-plan-button">Създай учебна програма</button>
   <br></br>
   <table id="plans-table">
     <thead>
