fix: plan deletion, cyrillic node labels, styles

--- a/client/components/listPlans/listPlans.html
+++ b/client/components/listPlans/listPlans.html
@@ -14,6 +14,7 @@
 <body>
   <h1>Учебни програми</h1>
   <button id="create-plan-button">Създай учебна програма</button>
+  <button id="to-dep-graph">Виж граф на зависимостите</button>
   <br></br>
   <table id="plans-table">
     <thead>
