--- a/client/components/editPlan/editPlan.css
+++ b/client/components/editPlan/editPlan.css
@@ -1,3 +1,10 @@
+#plan-form {
+  border: solid;
+  border-width: 2px;
+  border-radius: 15px;
+  padding: 20px 30px 20px 20px;
+}
+
 body {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -72,6 +79,7 @@ button[type="submit"] {
   background-color: #4CAF50;
   color: #fff;
   border: none;
+  border-radius: 5px;
   cursor: pointer;
 }
 
