style: adjust for screen without zoom

--- a/client/components/createPlan/createPlan.css
+++ b/client/components/createPlan/createPlan.css
@@ -9,6 +9,10 @@
   margin-bottom: 25px;
 }
 
+#upload-json-form > input {
+  font-size: 80%;
+}
+
 #plan-form {
   border: solid;
   border-width: 2px;
@@ -17,6 +21,7 @@
 }
 
 body {
+  font-size: 150%;
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 20px;
@@ -28,7 +33,7 @@ h1 {
 }
 
 form {
-  width: 400px;
+  width: 40vw;
   margin: 0 auto;
 }
 
@@ -40,6 +45,7 @@ label {
 
 input[type="text"],
 textarea {
+  font-size: 100%;
   width: 100%;
   padding: 5px;
   margin-bottom: 10px;
@@ -66,6 +72,7 @@ textarea {
 }
 
 .radio-container input[type="radio"] {
+  transform: scale(1.5);
   margin-bottom: 5px;
 }
 
@@ -80,11 +87,14 @@ textarea {
 }
 
 .checkbox-container input[type="checkbox"] {
+  transform: scale(1.5);
   margin-right: 5px;
+  margin-top: 0.4pc;
   float: left;
 }
 
 button[type="submit"] {
+  font-size: 80%;
   text-align: center;
   margin-bottom: 10px;
   padding: 10px 20px;
