--- a/client/components/editPlan/editPlan.html
+++ b/client/components/editPlan/editPlan.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <h1>Редактирай учебна програма</h1>
+  <h1>~ Редактирай учебна програма ~</h1>
   <form id="plan-form">
     <label>Тип дисциплина:</label>
     <div class="radio-container">
