--- a/client/components/listPlans/listPlans.css
+++ b/client/components/listPlans/listPlans.css
@@ -1,4 +1,11 @@
+body {
+  font-size: 150%;
+  margin: 0;
+  padding: 15px;
+}
+
 button {
+  font-size: 80%;
   padding: 10px;
   background-color: #4CAF50;
   color: #fff;
