--- a/client/components/createPlan/createPlan.css
+++ b/client/components/createPlan/createPlan.css
@@ -20,6 +20,13 @@
   padding: 20px 30px 20px 20px;
 }
 
+#dependencies {
+  margin-bottom: 20px;
+  font-size: 80%;
+  width: 100%;
+  height: 200px;
+}
+
 body {
   font-size: 150%;
   font-family: Arial, sans-serif;
@@ -48,11 +55,11 @@ textarea {
   font-size: 100%;
   width: 100%;
   padding: 5px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 textarea {
-  height: 100px;
+  height: 150px;
 }
 
 .radio-container {
@@ -91,6 +98,23 @@ textarea {
   margin-right: 5px;
   margin-top: 0.4pc;
   float: left;
+}
+
+.pill {
+  background-color: #4CAF50;
+  border: none;
+  color: #fff;
+  padding: 5px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 16px;
+}
+
+.pill:hover {
+  background-color: #45a049;
 }
 
 button[type="submit"] {
