feat: allow editing of plan dependencies

--- a/client/components/editPlan/editPlan.html
+++ b/client/components/editPlan/editPlan.html
@@ -51,10 +51,8 @@
     <label for="requiredSkills">Нужни познания:</label>
     <textarea type="text" id="requiredSkills" name="requiredSkills"></textarea>
 
-    <!-- TODO: some kind of drop down select list -->
-    <!-- NOTE: could be empty -->
-    <!-- <label for="dependencies">Зависимости (други курсове)</label> -->
-    <!-- <input type="text" id="dependencies" name="dependencies" required> -->
+    <label for="dependencies">Зависимости (други курсове)</label>
+    <select name="dependencies" id="dependencies" multiple></select>
 
     <label for="aquiredSkills">Очаквани резултати:</label>
     <textarea type="text" id="aquiredSkills" name="aquiredSkills"></textarea>
