--- a/client/components/editPlan/editPlan.css
+++ b/client/components/editPlan/editPlan.css
@@ -78,6 +78,13 @@ textarea {
   float: left;
 }
 
+#dependencies {
+  margin-bottom: 20px;
+  font-size: 80%;
+  width: 100%;
+  height: 200px;
+}
+
 button[type="submit"] {
   font-size: 80%;
   margin-bottom: 10px;
