--- a/client/components/login/login.html
+++ b/client/components/login/login.html
@@ -5,6 +5,7 @@
   <title>Login</title>
   <meta charset="UTF-8">
   <script src="login.js"></script>
+  <script src="../../modules/constants.js"></script>
   <link rel="stylesheet" href="login.css" />
 </head>
 
@@ -12,6 +13,7 @@
   <form id="login-form">
     <input required type="text" placeholder="Username" />
     <input required type="password" placeholder="Password" />
+    <p id="error-message"></p>
     <button type="submit">Sign In</button>
   </form>
 </body>
