--- a/client/components/register/register.html
+++ b/client/components/register/register.html
@@ -5,6 +5,7 @@
   <title>Register</title>
   <meta charset="UTF-8">
   <script src="register.js"></script>
+  <script src="../../modules/constants.js"></script>
   <link rel="stylesheet" href="register.css" />
 </head>
 
@@ -12,6 +13,7 @@
   <form id="register-form">
     <input required type="text" placeholder="Username" />
     <input required type="password" placeholder="Password" />
+    <p id="error-message"></p>
     <button type="submit">Register</button>
   </form>
 </body>
