feat: user logout

--- a/client/components/listPlans/listPlans.css
+++ b/client/components/listPlans/listPlans.css
@@ -35,6 +35,34 @@ button:hover {
   background-color: #f0f0f0;
 }
 
+#logout {
+  margin-left: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#logout > div > img {
+  vertical-align: middle;
+}
+
+#username {
+  text-align: center;
+  margin-left: 10px;
+  margin-right: 10px;
+  vertical-align: middle;
+}
+
+#logout-button {
+  width: 150px;
+  margin-left: 10px;
+}
+
+.header-row {
+  display: flex;
+  justify-content: space-between;
+}
+
 .plan-name {
   max-width: 20vw;
   text-overflow: ellipsis;
