--- a/client/styles.css
+++ b/client/styles.css
@@ -1,3 +1,26 @@
+.form-container {
+  margin-top: 10vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.or-label {
+  font-size: 200%;
+  margin-top: 1vh;
+  margin-bottom: 1vh;
+}
+
+h1 {
+  width: 60vw;
+  text-align: center;
+  margin-bottom: 5vh;
+  border: solid;
+  border-width: 2px;
+  border-radius: 15px;
+  padding: 20px;
+}
+
 button {
   padding: 10px;
   background-color: #4CAF50;
@@ -5,6 +28,8 @@ button {
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  font-size: 150%;
+  min-width: 200px;
 }
 
 button:hover {
