--- a/client/components/listPlans/listPlans.html
+++ b/client/components/listPlans/listPlans.html
@@ -29,6 +29,7 @@
     <thead>
       <tr>
         <th class='plan-name'>Дисциплина</th>
+        <th class='plan-owner'>Титуляр</th>
         <th class='actions-cell' colspan="4">Още</th>
       </tr>
     </thead>
